--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestor-de-ligas-pro",
+  "name": "gestor-de-ligas-pro-2.1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "papaparse": "^5.5.3",
-    "react-icons": "^5.5.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.24.1",
+    "papaparse": "^5.4.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
