Mejoras a nivel general - Reestructura

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestor-de-ligas-pro-2.1",
+  "name": "gestor-de-ligas-pro-2.1---reestructura",
   "private": true,
   "version": "0.0.0",
   "type": "module",
